<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/BackgroundPrimaryLilac"
    android:weightSum="1">

    <ImageButton
        android:src="@mipmap/menu_lilac"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/menu_lilac"
        android:background="@color/BackgroundPrimaryLilac" />

    <TextView
        android:text="@string/task_list_label"
        android:id="@+id/task_list_label"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_alignBottom="@+id/menu_lilac"
        android:layout_toRightOf="@+id/menu_lilac"
        android:layout_toEndOf="@+id/menu_lilac" />

    <ExpandableListView
        android:layout_width="500dp"
        android:id="@+id/list_of_tasks"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/menu_lilac"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:divider="#551a8b"
        android:dividerHeight="1dp"/>

    <Button
        android:text="@string/add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="39dp"
        android:id="@+id/button"
        android:layout_below="@+id/list_of_tasks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/add_subtask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_alignRight="@+id/task_list_label"
        android:layout_alignEnd="@+id/task_list_label" />

</RelativeLayout>