<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/BackgroundPrimaryLilac"
    tools:context="com.example.kate.projectbreakitdown.MainActivity">

    <ImageButton
        android:src="@mipmap/menu_lilac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_lilac"
        android:background="@color/BackgroundPrimaryLilac"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/distractions_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35dp"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/menu_lilac"
        android:layout_centerHorizontal="true" />


    <ListView
        android:layout_width="500dp"
        android:layout_height="250dp"
        android:id="@+id/distractions_list"
        android:layout_marginTop="17dp"
        android:layout_below="@+id/menu_lilac"
        android:layout_alignParentStart="true" />


    <Button
        android:text="@string/add_distraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_distraction"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/Distractions_title_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/Distractions_label_add"
        android:textStyle="bold"
        android:layout_below="@+id/distractions_list"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@+id/Distractions_title_add"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/priority_title_add2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Priority_label_add"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Priority"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/priority_title_add2"
        android:layout_alignEnd="@+id/textView5" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/add_distraction"
        android:text="Not a new distraction"
        android:textSize="14dp"/>


</RelativeLayout>