<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/BackgroundPrimaryLilac"
    tools:context="com.example.kate.projectbreakitdown.MainActivity">


    <ImageButton
        android:src="@mipmap/menu_lilac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/menu_lilac"
        android:background="@color/BackgroundPrimaryLilac"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@mipmap/timer_background_purple"
        android:id="@+id/timer_background"
        android:layout_below="@+id/menu_lilac"
        android:layout_toRightOf="@+id/menu_lilac"
        android:layout_toEndOf="@+id/menu_lilac"
        android:layout_marginTop="34dp" />

    <TextView
        android:text="@string/timer_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timerValue"
        android:textSize="45dp"
        android:layout_alignBottom="@+id/timer_background"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Break It Down!"
        android:id="@+id/welcome_message"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/menu_lilac"
        android:layout_toEndOf="@+id/menu_lilac"
        android:layout_marginTop="12dp" />

    <Button
        android:text="@string/stop_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stopButton"
        android:layout_below="@+id/timer_background"
        android:layout_toRightOf="@+id/timerValue"
        android:layout_toEndOf="@+id/timerValue" />

    <Button
        android:text="@string/start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/startButton"
        android:layout_below="@+id/timer_background"
        android:layout_alignLeft="@+id/timer_background"
        android:layout_alignStart="@+id/timer_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startButton"
        android:layout_alignRight="@+id/interval_label"
        android:layout_alignEnd="@+id/interval_label"
        android:layout_marginTop="17dp"
        android:id="@+id/checker" />

    <TextView
        android:text="@string/interval_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/interval_label"
        android:layout_alignBottom="@+id/timer_background"
        android:layout_centerHorizontal="true" />

    <NumberPicker
        android:layout_height="40dp"
        android:id="@+id/interval_length"
        android:layout_width="40dp"
        android:solidColor="@color/BackgroundPrimaryLilac"
        android:layout_above="@+id/checker"
        android:layout_centerHorizontal="true" />

</RelativeLayout>

